# petstore-grpc

./: .gitignore  README.md  pyproject.toml
petstore/: client.py  petstore.db  schema.sql  server.py
petstore/proto/: petstore.proto  petstore_grpc.py  petstore_pb2.py  petstore_pb2.pyi
petstore/proto/services/: customer_service_grpc.py  customer_service_pb2.py  customer_service_pb2.pyi  order_service_grpc.py  order_service_pb2.py  order_service_pb2.pyi  pet_service.proto  pet_service_grpc.py  pet_service_pb2.py  pet_service_pb2.pyi
petstore/repositories/: __init__.py  abstract_repository.py  category_repository.py  customer_repository.py
petstore/services/: category_service.py
proto_files/: README.md
proto_files/petstore/proto/: petstore.proto
proto_files/petstore/proto/services/: category_service.proto  customer_service.proto  order_service.proto
tests/: conftest.py
tests/repositories/: test_category_repository.py
