[tool.poetry]
name = "petstore"
version = "1.0.0"
description = "Pet store grpc application"
authors = ["Krac"]


[tool.poetry.dependencies]
python = "^3.6"
protobuf = "^3.10"
grpclib = "^0.3.1"
typing-extensions = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
black = "==19.3b0"
grpcio-tools = "^1.25"
mypy-protobuf = "^1.16"

[build-system]
requires = ["poetry>=0.12"]
